@@ -20,9 +20,6 @@ http://github.com/idlesign/django-sitemetrics
 .. image:: https://img.shields.io/travis/idlesign/django-sitemetrics/master.svg
     :target: https://travis-ci.org/idlesign/django-sitemetrics
 
-.. image:: https://landscape.io/github/idlesign/django-sitemetrics/master/landscape.svg?style=flat
-   :target: https://landscape.io/github/idlesign/django-sitemetrics/master
-
 
 What's that
 -----------
