@@ -1,6 +1,7 @@
 [tox]
 envlist =
-    py{35,36,37}-django{18,19,110,111,200,210,220}
+    py{35}-django{18,19,110,111,20,21,22}
+    py{36,37,38}-django{18,19,110,111,20,21,22,30}
 
 install_command = pip install {opts} {packages}
 skip_missing_interpreters = True
@@ -13,6 +14,7 @@ deps =
     django19: Django>=1.9,<1.10
     django110: Django>=1.10,<1.11
     django111: Django>=1.11,<1.12
-    django200: Django>=2.0,<2.1
-    django210: Django>=2.1,<2.2
-    django220: Django>=2.2,<2.3
+    django20: Django>=2.0,<2.1
+    django21: Django>=2.1,<2.2
+    django22: Django>=2.2,<2.3
+    django30: Django>=3.0,<3.1
